# stride

./: .gitignore  PROJECT.md  pyproject.toml
src/actors/: __init__.py
src/stride/: __init__.py  cli.py  loop.py  main.py  world_model.py
src/stride.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stride/actors/: __init__.py
src/stride/ai/: __init__.py
src/stride/sensors/: __init__.py
tests/: test_ai_client.py  test_loop.py
