[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stride"
version = "0.1.0"
description = "Real-time frame-based agent"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
